--- a/2.html
+++ b/2.html
@@ -10,7 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 .collapsible {
-  background-color: #777;
+  background-color: #708d81;
   color: white;
   cursor: pointer;
   padding: 18px;
