--- a/3.html
+++ b/3.html
@@ -10,7 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 .collapsible {
-  background-color: #777;
+  background-color: #708d81;
   color: white;
   cursor: pointer;
   padding: 18px;
@@ -22,7 +22,7 @@
 }
 
 .active, .collapsible:hover {
-  background-color: #555;
+  background-color:#1d3557;
 }
 
 .content {
