--- a/head page.html
+++ b/head page.html
@@ -7,6 +7,54 @@
                                            <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;600;700&display=swap" rel="stylesheet">
+    <style>
+        /* General styles for larger screens */
+body {
+    font-family: 'Poppins', sans-serif;
+}
+
+.nav-links ul {
+    display: flex;
+    list-style: none;
+}
+
+.nav-links ul li {
+    margin: 0 15px;
+}
+
+/* Responsive styles for smaller screens */
+@media (max-width: 768px) {
+    .nav-links ul {
+        flex-direction: column;
+        display: none; /* Initially hidden for mobile */
+    }
+
+    .nav-links.active ul {
+        display: block; /* Show when needed */
+    }
+
+    nav img {
+        max-width: 100%;
+        height: auto;
+    }
+
+    .text-box h1 {
+        font-size: 24px;
+    }
+
+    .row {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .campus-col {
+        max-width: 90%;
+        margin-bottom: 20px;
+    }
+}
+
+    </style>
                                                                                                                         </head>
 <body>
     <section class="header">
