--- a/head page.html
+++ b/head page.html
@@ -7,7 +7,15 @@
                                            <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;600;700&display=swap" rel="stylesheet">
+ <style>
+     @media (max-width: 768px) {
   
+
+    .text-box h1 {
+        font-size: 24px;
+    }
+
+ </style> 
                                                                                                                         </head>
 <body>
     <section class="header">
