--- a/head page.html
+++ b/head page.html
@@ -32,7 +32,7 @@
                     <li><a href="">TIPS</a></li>
                 </ul>
             </div>
-            <div class="hamburger" onclick="toggleMenu()">☰</div>
+            <div class="hamburger" onclick="toggleMenu()"></div>
         </nav>
 <div class="text-box"> 
                      <h1> Educational platform </h1>
