--- a/all-about.html
+++ b/all-about.html
@@ -40,6 +40,9 @@
         justify-content: space-between;
         align-items: center;
     }
+    .esal{
+    font-size:12px;
+    }
 }
 
 .hamburger {
