--- a/all-about.html
+++ b/all-about.html
@@ -7,7 +7,8 @@
                                            <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;600;700&display=swap" rel="stylesheet">
-    <style>.nav-links ul {
+    <style>
+.nav-links ul {
     display: flex;
     list-style: none;
     margin: 0;
@@ -72,7 +73,7 @@
  
 <section class="esa1">
     <hr align="center" color="white" nozhade size="5px" width="100%">
-            <p style="font-size:10px; align:center;"> <br><br><br>The Grade 12 summative assessment will assess the content of <br>AEO «Nazarbayev
+            <p font-size="10px" align:"center"> <br><br><br>The Grade 12 summative assessment will assess the content of <br>AEO «Nazarbayev
 Intellectual Schools» Educational Programme <br>– NIS-Programme for High school. The level
 of learning of <br> the Computer Science  subject content  will be <br>defined by the learning outcomes
 from the Computer <br> Science Subject Programme.</p> <br><br><br><br><br><br><br>
@@ -81,7 +82,7 @@ from the Computer <br> Science Subject Programme.</p> <br><br><br><br><br><br><b
 <section class="esa">
     <h2 align="center" font-size="18px"><B>Description of External Summative Assessment papers
 </B></h2><br>
-    <p align="center" font-size="10px">The External Summative Assessments will be designed to be comparable to the
+    <p align="center" font-size="18px">The External Summative Assessments will be designed to be comparable to the
 International A-Level standards</p><br>
     <table>
   <thead>
