--- a/all-about.html
+++ b/all-about.html
@@ -67,9 +67,7 @@
 <section class="esa1">
     <hr align="center" color="white" nozhade size="5px" width="100%">
             <p font-size="8Spx" align="center"> <br><br><br>The Grade 12 summative assessment will assess the content of <br>AEO «Nazarbayev
-Intellectual Schools» Educational Programme <br>– NIS-Programme for High school. The level
-of learning of <br> the Computer Science  subject content  will be <br>defined by the learning outcomes
-from the Computer <br> Science Subject Programme.</p> <br><br><br><br><br><br><br>
+Intellectual Schools» Educational Programme <br>– NIS-Programme for High school. </p> <br><br><br><br><br><br><br>
      <hr align="center" color="white" nozhade size="5px" width="100%">
     </section>
 <section class="esa">
