--- a/head page.html
+++ b/head page.html
@@ -15,6 +15,11 @@
         font-size: 24px;
         left: 50%;
     }
+    a{
+        font-size:10px;
+    }
+     }
+     
 
  </style> 
                                                                                                                         </head>
